# nsnake

./: .gitignore  CMakeLists.txt  README.md  nsnake.cpp  snake.cpp
